<resources>
    <string name="app_name">Minesweeper</string>
    <string name="play">Play</string>
    <string name="select">Select Number of Mines: </string>
    <string name="rules">
        <strong>Rules:</strong> Click squares to reveal what\'s hidden underneath.
        Numbers indicate amount of mines block is touching. Flag is used to mark found mines.
        Clicking a mine square will blow it up losing the game. Flag all mines to win.
        (Put flag back once done using it.)
    </string>
    <string-array name="numbers">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
    </string-array>
    <string name="description">Mine image</string>
</resources>